[package]
name = "uniswap_twap_oracle_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "5.0.0"
ethers-solc = "0.10.0"
dotenv = "0.31.0"
tokio = { version = "1.27.0", features = ["full"] }
async-std = "1.0.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.85"
reqwest = "0.11.14"
url = "2.3.0"
chrono = "0.4.27"
thiserror = "1.0.36"